[gd_scene load_steps=52 format=3 uid="uid://bfu2peuf5fcxb"]

[ext_resource type="Script" path="res://player.gd" id="1_tdkwl"]
[ext_resource type="Texture2D" uid="uid://2h8t7lkpwm5f" path="res://assets/textures/player/player_animations.png" id="2_6wm3s"]
[ext_resource type="Script" path="res://autoloads/scripts/user_state_machine.gd" id="3_h3qdk"]
[ext_resource type="Script" path="res://idle.gd" id="5_w1v2x"]
[ext_resource type="Script" path="res://run.gd" id="6_54a5s"]
[ext_resource type="Script" path="res://hide.gd" id="7_2n7qf"]
[ext_resource type="Texture2D" uid="uid://6ixs0jh1t3by" path="res://assets/light_texture.png" id="7_mcg1c"]
[ext_resource type="AudioStream" uid="uid://c5e0tp5qqh53m" path="res://assets/audio/player/MAIN_CHAR_Climb_SFX.wav" id="8_vv50h"]
[ext_resource type="AudioStream" uid="uid://5lonfkdq0y23" path="res://assets/audio/player/MAIN_CHAR_Grass_Run_LP.wav" id="9_2f7o6"]
[ext_resource type="AudioStream" uid="uid://bbkqxlg3kcpf6" path="res://assets/audio/player/main_character_caught.wav" id="9_c7akt"]
[ext_resource type="AudioStream" uid="uid://2ojp0woxnc17" path="res://assets/audio/player/MAIN_CHAR_Wood_Run_LP.wav" id="10_ld2rc"]
[ext_resource type="AudioStream" uid="uid://dhfl2xi4y8xo7" path="res://assets/audio/player/MAIN_CHAR_Hide_SFX.wav" id="11_1uoav"]
[ext_resource type="AudioStream" uid="uid://b7lkp0brbrg6a" path="res://assets/audio/player/MAIN_CHAR_Show_SFX.wav" id="12_8mirb"]
[ext_resource type="Script" path="res://autoloads/scripts/state.gd" id="14_8n3yc"]

[sub_resource type="GDScript" id="GDScript_hcyft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyur0"]
size = Vector2(48, 136)

[sub_resource type="Animation" id="Animation_kjbdr"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6c1tp"]
resource_name = "caught"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CaughtStream:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1m18w"]
resource_name = "climb"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_n1atl"]
resource_name = "hide"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.588235)]
}

[sub_resource type="Animation" id="Animation_0xa8q"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_4sdmf"]
resource_name = "reveal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.588235), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sqqtx"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_3042p"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8hnw5"]
_data = {
"RESET": SubResource("Animation_kjbdr"),
"caught": SubResource("Animation_6c1tp"),
"climb": SubResource("Animation_1m18w"),
"hide": SubResource("Animation_n1atl"),
"idle": SubResource("Animation_0xa8q"),
"reveal": SubResource("Animation_4sdmf"),
"run": SubResource("Animation_sqqtx"),
"walk": SubResource("Animation_3042p")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3xkrr"]
animation = &"caught"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oh7io"]
animation = &"climb"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nkhrb"]
animation = &"hide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pwuwt"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7iure"]
animation = &"reveal"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jpmqb"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rpf77"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_shdoa"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3eu1w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jv450"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_58h0j"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f01t6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mrv0u"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_32ytx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sqa3y"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n0hml"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qmyeb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pprej"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b0plq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qdccx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cu7hc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ajdjg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aeafl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4mrj4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bi3k8"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_uowq0"]
states/End/position = Vector2(937, 180)
states/Start/position = Vector2(180, 180)
states/caught/node = SubResource("AnimationNodeAnimation_3xkrr")
states/caught/position = Vector2(512, 192)
states/climb/node = SubResource("AnimationNodeAnimation_oh7io")
states/climb/position = Vector2(833, 100)
states/hide/node = SubResource("AnimationNodeAnimation_nkhrb")
states/hide/position = Vector2(833, -57)
states/idle/node = SubResource("AnimationNodeAnimation_pwuwt")
states/idle/position = Vector2(325, 100)
states/reveal/node = SubResource("AnimationNodeAnimation_7iure")
states/reveal/position = Vector2(1017, -57)
states/run/node = SubResource("AnimationNodeAnimation_jpmqb")
states/run/position = Vector2(325, -57)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_rpf77"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_shdoa"), "idle", "climb", SubResource("AnimationNodeStateMachineTransition_3eu1w"), "idle", "hide", SubResource("AnimationNodeStateMachineTransition_jv450"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_58h0j"), "run", "hide", SubResource("AnimationNodeStateMachineTransition_f01t6"), "run", "climb", SubResource("AnimationNodeStateMachineTransition_mrv0u"), "climb", "idle", SubResource("AnimationNodeStateMachineTransition_32ytx"), "climb", "run", SubResource("AnimationNodeStateMachineTransition_sqa3y"), "climb", "hide", SubResource("AnimationNodeStateMachineTransition_n0hml"), "hide", "run", SubResource("AnimationNodeStateMachineTransition_qmyeb"), "hide", "climb", SubResource("AnimationNodeStateMachineTransition_pprej"), "hide", "reveal", SubResource("AnimationNodeStateMachineTransition_b0plq"), "reveal", "idle", SubResource("AnimationNodeStateMachineTransition_qdccx"), "idle", "caught", SubResource("AnimationNodeStateMachineTransition_cu7hc"), "run", "caught", SubResource("AnimationNodeStateMachineTransition_ajdjg"), "hide", "caught", SubResource("AnimationNodeStateMachineTransition_aeafl"), "climb", "caught", SubResource("AnimationNodeStateMachineTransition_4mrj4"), "reveal", "caught", SubResource("AnimationNodeStateMachineTransition_bi3k8")]
graph_offset = Vector2(84, 36)

[node name="Player" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 9
script = ExtResource("1_tdkwl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -360)
limit_top = -205
limit_bottom = 1100
script = SubResource("GDScript_hcyft")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -74)
texture = ExtResource("2_6wm3s")
hframes = 8
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -68)
shape = SubResource("RectangleShape2D_lyur0")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -6.5)
scale = Vector2(11, 1)
target_position = Vector2(0, 9)
collide_with_areas = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -76.5)
energy = 0.8
texture = ExtResource("7_mcg1c")

[node name="ClimbStream" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -203.5)
stream = ExtResource("8_vv50h")
bus = &"Sound Effects"

[node name="GrassRunStream" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -203.5)
stream = ExtResource("9_2f7o6")
bus = &"Sound Effects"

[node name="WoodRunStream" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -203.5)
stream = ExtResource("10_ld2rc")
bus = &"Sound Effects"

[node name="HideStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_1uoav")

[node name="RevealStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_8mirb")

[node name="CaughtStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_c7akt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8hnw5")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_uowq0")
anim_player = NodePath("../AnimationPlayer")

[node name="UserStateMachine" type="Node" parent="." node_paths=PackedStringArray("idle_state_node", "run_state_node", "hide_state_node")]
script = ExtResource("3_h3qdk")
idle_state_node = NodePath("IdleState")
run_state_node = NodePath("RunState")
hide_state_node = NodePath("HideState")

[node name="IdleState" type="Node" parent="UserStateMachine" node_paths=PackedStringArray("actor", "animation_tree")]
script = ExtResource("5_w1v2x")
actor = NodePath("../..")
animation_tree = NodePath("../../AnimationTree")

[node name="RunState" type="Node" parent="UserStateMachine" node_paths=PackedStringArray("actor", "animation_tree")]
script = ExtResource("6_54a5s")
actor = NodePath("../..")
animation_tree = NodePath("../../AnimationTree")

[node name="HideState" type="Node" parent="UserStateMachine" node_paths=PackedStringArray("actor", "animation_tree")]
script = ExtResource("7_2n7qf")
actor = NodePath("../..")
animation_tree = NodePath("../../AnimationTree")

[node name="WalkState" type="Node" parent="UserStateMachine"]
script = ExtResource("14_8n3yc")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
